確定ボタンの追加

--- a/main.html
+++ b/main.html
@@ -100,6 +100,7 @@
                 <option value="out">出金</option>
                 <option value="in">入金</option>
             </select>
+            　　　<button id="confirm" onclick="moneymove()">確定</button>
         </p>
     </div>
 </body>
