クラウドへバックアップボタンを左寄せで追加

--- a/main.html
+++ b/main.html
@@ -107,6 +107,7 @@
             　　　現在残金：
             <a id="leftmoney"></a><br>
             <button id="registerwork" onclick="location='registerwork.html'" type="button">アルバイト入力</button>
+            <button id="cloud" onclick="location='cloud.html'" type="button">クラウドへバックアップ</button>
         </p>
     </div>
 </body>
