各種htmlを新規作成 jqueryを実行可能にしました。 register.htmlにcsvダウンロード機能を実装

--- a/main.html
+++ b/main.html
@@ -108,10 +108,10 @@
             　　　<button id="confirm" onclick="moneymove()">確定</button>
         </p>
         <p>
-            <button id="writesift" onclick="location='writesift.html'" type="button">シフト入力</button>
+            <button id="writesift" onclick="location='writeshift.html'" type="button">シフト入力</button>
             　　　現在残金：
             <a id="leftmoney"></a><br>
-            <button id="registerwork" onclick="location='registerwork.html'" type="button">アルバイト登録</button>
+            <button id="registerwork" onclick="location='registerwork.html'" type="button">新規アルバイト登録</button>
             <button id="cloud" onclick="location='cloud.html'" type="button">クラウドへバックアップ</button>
         </p>
     </div>
