--- a/register.html
+++ b/register.html
@@ -1,9 +1,10 @@
 <html>
 
 <head>
-
+    <meta charset="utf-8" />
 
     <script src="query-js/jquery-3.6.0.min.js"></script>
+    <object id="csvfile" data="worklist.txt"></object>
     <script>
         $().ready(function () {
             var keyName = 'visited';
@@ -15,27 +16,54 @@
                 if (!localStorage.getItem(keyName)) {
                     //localStorageにキーと値を追加
                     localStorage.setItem(keyName, keyValue);
-                    console.log("実行マンです")
-                    var file = document.querySelector('worklist.csv');
-                    // input 変化時に読み込む
-                    file.onchange = function () {
-                        var fileList = file.files;
-                        var reader = new FileReader();
-                        reader.readAsText(fileList[0]);
-                        //読み込み後表示
-                        reader.onload = function () {
-                            document.querySelector('#preview').textContent = reader.result;
-                        };
+                    console.log("ダウンロード中です")
+
+                    var TempData = [];
+                    var Template = ["アルバイト名", "開始時間", "終了時間"]
+                    TempData.push(Template)
+
+                    var str = "";
+                    var len_dayOfWeek = Object.keys(TempData[0]).length;
+                    for (var i = 0; i < len_dayOfWeek; i++) {
+                        if (i == 0) {
+                            str += "," + TempData[0][i] + ",";
+                        } else if (i == len_dayOfWeek - 1) {
+                            str += TempData[0][i] + "\n"; //Satで改行する
+                        } else {
+                            str += TempData[0][i] + ","; //カンマで区切る
+                        }
                     }
+                    var len_element = Object.keys(TempData).length;
+                    for (var i = 0; i < len_element - 1; i++) { //観測地域数分ループ
+                        str += TempData[i + 1][0] + ",";
+                        var len_tempData = Object.keys(TempData[i + 1][1]).length;
+                        for (var j = 0; j < len_tempData; j++) {
+                            if (j == len_tempData - 1) {
+                                str += TempData[i + 1][1][j] + "\n";//観測地域最後の気温データで改行
+                            } else {
+                                str += TempData[i + 1][1][j] + ","; //カンマで区切る
+                            }
+                        }
+                    }
+                    var bom = new Uint8Array([0xEF, 0xBB, 0xBF]);
+                    var blob = new Blob([bom, str], { type: "text/csv" }); //配列に上記の文字列(str)を設定
+                    var link = document.createElement('a');
+                    link.href = URL.createObjectURL(blob);
+                    link.download = "worklist.csv";
+                    link.click();
                 };
             } catch (error) {
-                console.log("実行されていますよ")
-                var str = "";
-                var blob = new Blob([str], { type: "text/csv" }); //配列に上記の文字列(str)を設定
-                var link = document.createElement('a');
-                link.href = URL.createObjectURL(blob);
-                link.download = "worklist.csv";
-                link.click();
+                // console.log("読み込み処理をします！")
+                // const getcsv = document.getElementById("csvfile")
+                // const file = parseCSV(await getcsv[0].text())
+                // console.log(file)
+
+                // var str = "";
+                // var blob = new Blob([str], { type: "text/csv" }); //配列に上記の文字列(str)を設定
+                // var link = document.createElement('a');
+                // link.href = URL.createObjectURL(blob);
+                // link.download = "worklist.csv";
+                // link.click();
             }
         })
 
