--- a/register.html
+++ b/register.html
@@ -62,9 +62,10 @@
 
         function readfile() {
             var data = document.querySelector('#getcsv').files
-            document.querySelector('#name').innerHTML = getcsv.name;
-            document.querySelector('#type').innerHTML = getcsv.type;
-            document.querySelector('#size').innerHTML = getcsv.size / 1024;
+            console.log(data[0].name)
+            document.querySelector('#named').innerHTML = data[0].name;
+            document.querySelector('#type').innerHTML = data[0].type;
+            document.querySelector('#size').innerHTML = data[0].size / 1024 + "MB";
         }
         function push_register() {
             var name = document.getElementById("name").value
@@ -87,9 +88,11 @@
         <input id="moneyh" placeholder="時給">
         <button id="confirm" onclick="push_register()">確定</button>
     </p>
-    <span id="name"></span>
-    <span id="type"></span>
-    <span id="size"></span>
+    <p>
+        <span id="named"></span>
+        <span id="type"></span>
+        <span id="size"></span>
+    </p>
 </body>
 
 </html>
